--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "barrelify",
   "displayName": "Barrelify",
   "description": "Streamlines project's organization by automatically generating barrel files",
-  "version": "0.0.1-beta.6",
+  "version": "0.0.1",
   "license": "MIT",
   "publisher": "mumincelal",
   "homepage": "https://github.com/mumincelal/barrelify",
