--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,12 @@
 name: Publish
 run-name: Publish
 on:
+  push:
+    branches:
+      - main
   release:
-    types: [published]
+    types:
+      - published
 
 jobs:
   release:
