feat: add semantic release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,9 @@
 {
-  "branch": "main",
+  "branches": [
+    {
+      "name": "main"
+    }
+  ],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
