--- a/.releaserc.json
+++ b/.releaserc.json
@@ -18,14 +18,14 @@
     "@semantic-release/git",
     {
       "path": "semantic-release-vsce",
-      "packageVsix": "mumincelal.vscode-barrelify.vsix"
+      "packageVsix": "mumincelal.barrelify.vsix"
     }
   ],
   "publish": [
     "semantic-release-vsce",
     {
       "path": "@semantic-release/github",
-      "assets": "mumincelal.vscode-barrelify.vsix"
+      "assets": "mumincelal.barrelify.vsix"
     }
   ]
 }
