--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "barrelify",
   "displayName": "Barrelify",
   "description": "Streamlines project's organization by automatically generating barrel files",
-  "version": "0.0.2",
+  "version": "v0.1",
   "license": "MIT",
+  "private": true,
   "publisher": "mumincelal",
   "homepage": "https://github.com/mumincelal/barrelify",
   "repository": {
@@ -52,7 +53,11 @@
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.3",
+    "@semantic-release/npm": "^11.0.1",
+    "@semantic-release/release-notes-generator": "^12.1.0",
     "@types/mocha": "^10.0.3",
     "@types/node": "18.x",
     "@types/vscode": "^1.84.0",
