--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,7 +7,12 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/npm",
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ],
     "@semantic-release/changelog",
     "@semantic-release/git",
     "@semantic-release/github"
@@ -15,7 +20,16 @@
   "prepare": [
     "@semantic-release/npm",
     "@semantic-release/changelog",
-    "@semantic-release/git",
+    [
+      "@semantic-release/git",
+      {
+        "assets": [
+          "package.json",
+          "CHANGELOG.md"
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }
+    ],
     {
       "path": "semantic-release-vsce",
       "packageVsix": "mumincelal.barrelify.vsix"
@@ -27,5 +41,6 @@
       "path": "@semantic-release/github",
       "assets": "mumincelal.barrelify.vsix"
     }
-  ]
+  ],
+  "repositoryUrl": "https://github.com/mumincelal/barrelify"
 }
