chore: change release strategy

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,11 +26,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install
-          npm install -g @vscode/vsce
+          yarn install
+          yarn install -g @vscode/vsce
 
       - name: Semantic Release
-        run: npm run semantic-release
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VSCE_PAT: ${{ secrets.VSCODE_MARKETPLACE_TOKEN }}
