--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,11 +26,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install --no-yarn
-          npm install -g @vscode/vsce
+          yarn install
 
       - name: Semantic Release
-        run: npm run semantic-release
+        run: yarn semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VSCE_PAT: ${{ secrets.VSCODE_MARKETPLACE_TOKEN }}
