--- a/.releaserc.json
+++ b/.releaserc.json
@@ -25,7 +25,7 @@
       {
         "assets": [
           "package.json",
-          "package-lock.json",
+          "yarn.lock",
           "CHANGELOG.md"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
