--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,18 +7,13 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    [
-      "@semantic-release/npm",
-      {
-        "npmPublish": false
-      }
-    ],
+    "semantic-release-yarn",
     "@semantic-release/changelog",
     "@semantic-release/git",
     "@semantic-release/github"
   ],
   "prepare": [
-    "@semantic-release/npm",
+    "semantic-release-yarn",
     "@semantic-release/changelog",
     [
       "@semantic-release/git",
