--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "prettier": "^3.1.0",
     "semantic-release": "^22.0.7",
     "semantic-release-vsce": "^5.6.3",
+    "semantic-release-yarn": "^3.0.2",
     "typescript": "^5.2.2"
   },
   "packageManager": "yarn@4.0.2"
