--- a/package.json
+++ b/package.json
@@ -52,28 +52,33 @@
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^9.2.3",
-    "@semantic-release/npm": "^11.0.1",
-    "@semantic-release/release-notes-generator": "^12.1.0",
-    "@types/mocha": "^10.0.3",
-    "@types/node": "18.x",
-    "@types/vscode": "^1.84.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "20.10.0",
+    "@types/vscode": "^1.84.2",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "@vscode/test-electron": "^2.3.6",
+    "@typescript-eslint/parser": "^6.12.0",
+    "@vscode/test-electron": "^2.3.8",
     "@vscode/vsce": "^2.22.0",
-    "eslint": "^8.52.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "glob": "^10.3.10",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.0",
-    "semantic-release": "^22.0.7",
+    "semantic-release": "^22.0.8",
     "semantic-release-vsce": "^5.6.3",
     "semantic-release-yarn": "^3.0.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
+  },
+  "vsce": {
+    "baseImagesUrl": "https://my.custom/base/images/url",
+    "dependencies": true,
+    "yarn": false
   },
   "packageManager": "yarn@4.0.2"
 }
