feat: change release settings

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,6 +7,7 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/github",
+    "semantic-release-vsce",
     "@semantic-release/git"
   ]
 }
