feat: change release settings

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,9 +5,26 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
     "@semantic-release/changelog",
     "@semantic-release/github",
+    "@semantic-release/git",
+    "semantic-release-vsce"
+  ],
+  "prepare": [
+    "@semantic-release/npm",
+    "@semantic-release/changelog",
+    "@semantic-release/git",
+    {
+      "path": "semantic-release-vsce",
+      "packageVsix": "mumincelal.barrelify.vsix"
+    }
+  ],
+  "publish": [
     "semantic-release-vsce",
-    "@semantic-release/git"
+    {
+      "path": "@semantic-release/github",
+      "assets": "mumincelal.barrelify.vsix"
+    }
   ]
 }
