--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,23 +3,14 @@ name: Release
 on:
   workflow_dispatch:
 
-permissions:
-  contents: read
-
 jobs:
   release:
     name: Release
+    if: ${{ github.repository_owner == 'mumincelal' }}
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          persist-credentials: false
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
