--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,11 +3,20 @@ name: Release
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  issues: read
+  pull-requests: read
+
 jobs:
   release:
     name: Release
     if: ${{ github.repository_owner == 'mumincelal' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
