--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install --no-yarn
+        run: yarn install
 
       - name: Semantic Release
         run: npx semantic-release
