--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,9 +27,7 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: |
-          npm install
-          yarn install
+        run: npm install
 
       - name: Semantic Release
         run: npx semantic-release
