--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,4 +40,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VSCE_PAT: ${{ secrets.VSCODE_MARKETPLACE_TOKEN }}
-          OVSX_PAT: ${{ secrets.OVSX_MARKETPLACE_TOKEN }}
+          # OVSX_PAT: ${{ secrets.OVSX_MARKETPLACE_TOKEN }}
