--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,10 +6,10 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/npm",
-    "@semantic-release/changelog",
     "@semantic-release/github",
     "@semantic-release/git",
-    "semantic-release-vsce"
+    "semantic-release-vsce",
+    "@semantic-release/changelog"
   ],
   "prepare": [
     "@semantic-release/npm",
