--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@commitlint/config-conventional": "^18.4.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/mocha": "^10.0.6",
     "@types/node": "20.10.0",
     "@types/vscode": "^1.84.2",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
@@ -66,8 +67,10 @@
     "@vscode/vsce": "^2.22.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
+    "glob": "^10.3.10",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
+    "mocha": "^10.2.0",
     "prettier": "^3.1.0",
     "semantic-release": "^22.0.8",
     "semantic-release-vsce": "^5.6.3",
