fix: change semantic-release publish config

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,23 +21,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: latest
+      # - name: Setup pnpm
+      #   uses: pnpm/action-setup@v2
+      #   with:
+      #     version: latest
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'pnpm'
+          # cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm install
 
       - name: Semantic Release
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VSCE_PAT: ${{ secrets.VSCODE_MARKETPLACE_TOKEN }}
-          # OVSX_PAT: ${{ secrets.OVSX_MARKETPLACE_TOKEN }}
+          OVSX_PAT: ${{ secrets.OVSX_MARKETPLACE_TOKEN }}
