--- a/package.json
+++ b/package.json
@@ -22,24 +22,35 @@
     "mumincelal.barrelify"
   ],
   "activationEvents": [],
-  "main": "./out/extension.js",
+  "main": "./build/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "barrelify.handleBarrelFileWithCP",
+        "command": "barrelify.executeStepwiseBarrel",
         "category": "Barrelify",
-        "title": "Create/Update Barrel File"
+        "title": "Execute Barrel File"
       },
       {
-        "command": "barrelify.executeBarrelFile",
+        "command": "barrelify.executeWatcherBarrel",
+        "category": "Barrelify",
+        "title": "Execute Barrel File (Watch)"
+      },
+      {
+        "command": "barrelify.executeBarrel",
         "category": "Barrelify",
         "title": "Execute Barrel File"
       }
     ],
     "menus": {
+      "commandPalette": [
+        {
+          "command": "barrelify.executeBarrel",
+          "when": "false"
+        }
+      ],
       "explorer/context": [
         {
-          "command": "barrelify.executeBarrelFile",
+          "command": "barrelify.executeBarrel",
           "group": "2_barrelify"
         }
       ]
@@ -50,8 +61,9 @@
     "build": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "pnpm compile && pnpm lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js",
+    "lint": "eslint {src,test}/**/*.ts --fix",
+    "format": "prettier --write {src,test}/**/*.ts",
+    "test": "node ./build/test/runTest.js",
     "semantic-release": "semantic-release"
   },
   "devDependencies": {
@@ -59,11 +71,12 @@
     "@commitlint/config-conventional": "^18.4.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@tsconfig/node18": "^18.2.2",
     "@types/mocha": "^10.0.6",
     "@types/node": "20.10.0",
     "@types/vscode": "^1.84.2",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "@vscode/test-electron": "^2.3.8",
     "@vscode/vsce": "^2.22.0",
     "eslint": "^8.54.0",
@@ -74,7 +87,7 @@
     "mocha": "^10.2.0",
     "prettier": "^3.1.0",
     "semantic-release": "^22.0.8",
-    "semantic-release-vsce": "^5.6.3",
+    "semantic-release-vsce": "^5.6.4",
     "typescript": "^5.3.2"
   },
   "sponsor": {
