--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,5 +28,5 @@
     "no-throw-literal": "error",
     "semi": "error"
   },
-  "ignorePatterns": ["build", "dist", "**/*.d.ts"]
+  "ignorePatterns": ["out", "dist", "**/*.d.ts"]
 }
