feat: add file watcher option and update readme

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
         run: pnpm install
 
       - name: Building
+        run: pnpm build
+
+      - name: Preparing tests
         run: pnpm pretest
 
       - name: Running tests on Linux
