--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,5 @@
 name: Release
+run-name: Release
 
 on:
   workflow_dispatch:
@@ -10,7 +11,6 @@ permissions:
 
 jobs:
   release:
-    name: Release
     if: ${{ github.repository_owner == 'mumincelal' }}
     runs-on: ubuntu-latest
     permissions:
@@ -19,7 +19,7 @@ jobs:
       pull-requests: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # - name: Setup pnpm
       #   uses: pnpm/action-setup@v2
