--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "barrelify",
+  "name": "vscode-barrelify",
   "displayName": "Barrelify",
   "description": "Streamlines project's organization by automatically generating barrel files",
   "version": "1.3.0",
   "license": "MIT",
   "private": true,
   "publisher": "mumincelal",
-  "homepage": "https://github.com/mumincelal/barrelify",
+  "homepage": "https://github.com/mumincelal/vscode-barrelify",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mumincelal/barrelify.git"
+    "url": "https://github.com/mumincelal/vscode-barrelify.git"
   },
   "engines": {
     "vscode": "^1.84.0"
